FeaturedStream - Fix bad alignment

--- a/src/app/home/featured-stream/featured-stream.component.scss
+++ b/src/app/home/featured-stream/featured-stream.component.scss
@@ -33,7 +33,7 @@
 				cursor: pointer;
 				display: flex;
 				align-items: center;
-				margin-top: 6px;
+				justify-content: center;
 			}
 		}
 
